# gmail-scraper

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
ci_email_scraper/: __init__.py  __main__.py  cli.py  db.py  fixtures.py  parser.py  patterns.py  schema.sql  types.py
docs/superpowers/plans/: 2026-05-22-gmail-scraper-clean-room.md
docs/superpowers/specs/: 2026-05-21-gmail-scraper-clean-room.md
fixtures/circleci/: cancelled-manual.eml  failure-flaky-test.eml  failure-linter.eml  parallel-job-failure.eml  success-feature-branch.eml  success-main.eml
fixtures/github_actions/: cancelled-superseded.eml  failure-broken-tests.eml  failure-build-error.eml  matrix-build-mixed.eml  success-main-deploy.eml  success-pr-merged.eml
fixtures/jenkins/: aborted-timeout.eml  failure-compile.eml  failure-deploy.eml  multi-stage-partial.eml  success-nightly.eml  success-release.eml
tests/: conftest.py  test_cli.py  test_dirty_html.py  test_parser.py  test_patterns.py  test_upsert.py
