[project]
name = "ci-email-scraper"
version = "0.1.0"
description = "Parse CI/CD build notification emails into Postgres JSONB. Clean-room reference implementation of the HTML-email-to-structured-data pattern."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jamil Mendez" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ci-email-scraper = "ci_email_scraper.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ci_email_scraper*"]
exclude = ["tests*", "fixtures*"]

[tool.setuptools.package-data]
ci_email_scraper = ["schema.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers"]

[tool.coverage.run]
source = ["ci_email_scraper"]
omit = ["ci_email_scraper/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
